--- a/examfront/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/examfront/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -13,9 +13,9 @@
                         <mat-card-actions>
                             <div class="bootstrap-wrapper">
                                 <div class="row">
-                                    <div class="col-md-2">
+                                    <!-- <div class="col-md-2">
                                         <button mat-raised-button color = "primary">View</button>
-                                    </div>
+                                    </div> -->
                                     <div class="col-md-2">
                                         <button 
                                         mat-raised-button 
