--- a/examfront/src/app/pages/user/instructions/instructions.component.html
+++ b/examfront/src/app/pages/user/instructions/instructions.component.html
@@ -34,7 +34,7 @@
                         </ul>
                     </mat-card-content>
                     <mat-card-actions class="text-center">
-                        <button [routerLink] = "'/start/'+qid"
+                        <button
                         (click) = "startQuiz()"
                         mat-raised-button color = "primary">Start Quiz</button>
                     </mat-card-actions>
