--- a/examfront/src/app/pages/user/load-quiz/load-quiz.component.html
+++ b/examfront/src/app/pages/user/load-quiz/load-quiz.component.html
@@ -20,7 +20,7 @@
                                         <button 
                                         mat-raised-button 
                                         [routerLink] = "'/user-dashboard/instructions/'+q.qId" 
-                                        color = "accent">
+                                        color = "primary">
                                             Start
                                         </button>
                                     </div>
