--- a/examfront/src/app/pages/user/sidebar/sidebar.component.html
+++ b/examfront/src/app/pages/user/sidebar/sidebar.component.html
@@ -1,5 +1,10 @@
 <mat-card class="mt20">
     <mat-action-list>
+        <mat-card>
+            <button mat-list-item routerLink="/user-dashboard">
+                <mat-icon mat-list-icon>account_circle</mat-icon>User-Profile
+            </button>
+        </mat-card>
         <div mat-subheader>Available Categories</div>
         <button mat-list-item routerLink="/user-dashboard/0">
             <mat-icon mat-list-icon>quiz</mat-icon>All Quizzes
