--- a/examfront/src/app/pages/home/home.component.html
+++ b/examfront/src/app/pages/home/home.component.html
@@ -3,7 +3,12 @@
     <div class="text-block">
       <p class="banner-title">Welcome</p>
       <p class="banner-subtitle"><b>DXC Technology</b> Online Quiz</p>
+      <!-- <button 
+      [routerLink]="'/admin'" class="start-button" mat-raised-button color="accent">Getting start</button> -->
+     
+
     </div>
+    
     <div class="bootstrap-wrapper">
         <div class="container">
             <div class="row">
