--- a/examfront/src/app/pages/user/sidebar/sidebar.component.html
+++ b/examfront/src/app/pages/user/sidebar/sidebar.component.html
@@ -1,10 +1,26 @@
+
 <mat-card class="mt20">
     <mat-action-list>
-        <mat-card>
-            <button mat-list-item routerLink="/user-dashboard">
+        
+            <button mat-list-item routerLink="/user-dashboard/">
                 <mat-icon mat-list-icon>account_circle</mat-icon>User-Profile
             </button>
-        </mat-card>
+            <button mat-list-item routerLink="/user-dashboard/history/0">
+                <mat-icon mat-list-icon>history</mat-icon>History
+            </button>
+            <button  mat-list-item (click)="logout()"
+        >
+            <mat-icon mat-list-icon>logout</mat-icon>Logout
+        </button>
+        
+    </mat-action-list>
+
+</mat-card>
+
+<mat-card class="mt20">
+    
+    <mat-action-list>
+        
         <div mat-subheader>Available Categories</div>
         <button mat-list-item routerLink="/user-dashboard/0">
             <mat-icon mat-list-icon>quiz</mat-icon>All Quizzes
