--- a/examfront/src/app/pages/user/start/start.component.html
+++ b/examfront/src/app/pages/user/start/start.component.html
@@ -5,7 +5,15 @@
         <div class="row">
             <!-- Instructions -->
         <div class="col-md-2">
-            <mat-card style="margin-top: 72px;">
+            <mat-card style="margin-top: 20px;">
+                <mat-card-header>
+                    <mat-card-title><b>Video</b></mat-card-title>
+                </mat-card-header>
+                <mat-card-content>
+                    <video id="video" autoplay></video>
+                </mat-card-content>
+            </mat-card>
+            <mat-card style="margin-top: 20px;">
                 <mat-card-header>
                     <mat-card-title><b>Instructions</b></mat-card-title>
                 </mat-card-header>
@@ -99,6 +107,5 @@
         </div>
     </ng-container>
 </div>
-
 
 <!-- End Show Result -->
